TradeMarketing/force-app/main/default/objects/Return_Line_Item__c/Return_Line_Item__c.object-meta.xml
<CustomObject>
    <description>Return line items for individual products being processed as part of a return.</description>
    <label>Return Line Item</label>
    <nameField>
        <displayFormat>RETLI-{0000000}</displayFormat>
        <label>Return Line Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Return Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>