TradeMarketing/force-app/main/default/objects/Return_Line_Item__c/fields/Display_Record__c.field-meta.xml
<CustomField>
    <fullName>Display_Record__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Display_Record</label>
    <type>Checkbox</type>
</CustomField>