TradeMarketing/force-app/main/default/objects/Return_Line_Item__c/fields/Displays__c.field-meta.xml
<CustomField>
    <fullName>Displays__c</fullName>
    <description>The count of displays in the return. Displays are the primary unit of measurement in Great Plains.</description>
    <label>Displays</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>