TradeMarketing/force-app/main/default/objects/Return_Line_Item__c/fields/Integration_Record__c.field-meta.xml
<CustomField>
    <fullName>Integration_Record__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Integration Record</label>
    <type>Checkbox</type>
</CustomField>