TradeMarketing/force-app/main/default/objects/Return_Line_Item__c/fields/Pouches__c.field-meta.xml
<CustomField>
    <fullName>Pouches__c</fullName>
    <description>Count of the total number of pouches (or loose sticks) that are in the return line item.</description>
    <inlineHelpText>Count of the total number of pouches (or loose sticks) that are in the return line item.</inlineHelpText>
    <label>Pouches</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>