TradeMarketing/force-app/main/default/objects/Return_Line_Item__c/fields/Product_Date__c.field-meta.xml
<CustomField>
    <fullName>Product_Date__c</fullName>
    <description>The creation date stamped on the side of the product.</description>
    <label>Product Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>