TradeMarketing/force-app/main/default/objects/Return_Line_Item__c/fields/Product_Number__c.field-meta.xml
<CustomField>
    <fullName>Product_Number__c</fullName>
    <formula>Product__r.ProductCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Number</label>
    <type>Text</type>
</CustomField>