TradeMarketing/force-app/main/default/objects/Return_Line_Item__c/fields/Quantity_Type__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Type__c</fullName>
    <inlineHelpText>Select &quot;Display&quot; for whole boxes of product, select &quot;Pouch&quot; for individual pouches or loose sticks.</inlineHelpText>
    <label>Quantity Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pouch</fullName>
            </value>
            <value>
                <fullName>Display</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>