TradeMarketing/force-app/main/default/objects/Return_Line_Item__c/fields/Return__c.field-meta.xml
<CustomField>
    <fullName>Return__c</fullName>
    <label>Return</label>
    <referenceTo>Return__c</referenceTo>
    <relationshipLabel>Return Line Items</relationshipLabel>
    <relationshipName>Return_Line_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>