TradeMarketing/force-app/main/default/objects/Return_Line_Item__c/fields/Return_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Return_Percentage__c</fullName>
    <formula>IF(OR(OR(ISPICKVAL(Return_Code__c, &quot;Damaged&quot;),ISPICKVAL(Return_Code__c, &quot;Incorrect Item&quot;)), ISPICKVAL(Return_Code__c, &quot;Retail&quot;)), 1, IF(Age__c&gt;730, 0, IF(Age__c&gt;365, 0.5, 1)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Return Percentage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>